--- a/src/styles/dealContainer.css
+++ b/src/styles/dealContainer.css
@@ -3,8 +3,18 @@
 .dealCard {
     margin: 16px;
     padding: 20px 54px;
-    border: 2px solid var(--primary-color);
-    background-color: rgba(var(--primary-rgb), 0.15);
+    border: 2px solid var(--secondary-color);
+    background-color: var(--primary-color);
     width: fit-content;
     border-radius: 12px;
+    transition: all 0.4s;
+}
+
+.dealCard:hover {
+    cursor: pointer;
+    filter: drop-shadow(0px 10px 5px #ccc2b63b);
+}
+
+.dealCard img {
+    border-radius: 8px;
 }
