--- a/src/styles/dealContainer.css
+++ b/src/styles/dealContainer.css
@@ -1,10 +1,18 @@
 @import url(./globals.css);
 
+#dealContainer{
+    padding: var(--page-padding);
+}
+
+#dealContainer h1{
+    padding-top: 12px;
+}
+
 .dealCard {
-    margin: 16px;
+    margin: 24px 0;
     padding: 20px 54px;
-    border: 2px solid var(--secondary-color);
-    background-color: var(--primary-color);
+    border: 3px solid var(--light-color);
+    background-color: #ccc2b63a;
     width: fit-content;
     border-radius: 12px;
     transition: all 0.4s;
@@ -17,4 +25,35 @@
 
 .dealCard img {
     border-radius: 8px;
+}
+
+.tag {
+    display: flex;
+    align-items: center;
+}
+
+.saleTag{
+    text-align: center;
+    width: 80px;
+    height: 35px;
+    background-color: var(--secondary-color);
+    border-radius: 8px 0 0 8px;
+    border: 1.5px solid var(--secondary-color);
+}
+
+.priceTag{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80px;
+    height: 35px;
+    border-radius: 0 8px 8px 0;
+    border: 1.5px solid var(--secondary-color);
+}
+
+.originalPrice {
+    opacity: 0.75;
+    text-decoration: line-through;
+    margin-left: 6px;
+    align-self: flex-start;
 }
