--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,6 +36,19 @@
     gap: 14px;
   }
 
+  .justifyBetween{
+    justify-content: space-between !important; 
+  }
+
+  .marginTop{
+    
+    margin-top: 16px;
+  }
+
+  .accentColor{
+    color: #ffbe74;
+  }
+
   .mediumFont {
     font-size: 16px;
   }
