--- a/src/styles/dealContainer.css
+++ b/src/styles/dealContainer.css
@@ -2,18 +2,29 @@
 
 #dealContainer{
     padding: var(--page-padding);
+    width: 90%;
 }
 
 #dealContainer h1{
     padding-top: 12px;
 }
 
+#deals{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
 .dealCard {
-    margin: 24px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 24px;
     padding: 20px 54px;
     border: 3px solid var(--light-color);
     background-color: #ccc2b63a;
-    width: fit-content;
+    width: 40%;
     border-radius: 12px;
     transition: all 0.4s;
 }
@@ -25,6 +36,10 @@
 
 .dealCard img {
     border-radius: 8px;
+}
+
+.title{
+    max-width: 90%;
 }
 
 .tag {
