--- a/src/styles/dealContainer.css
+++ b/src/styles/dealContainer.css
@@ -3,10 +3,11 @@
 #dealContainer{
     padding: var(--page-padding);
     width: 90%;
+    overflow-y: scroll;
 }
 
 #dealContainer h1{
-    padding-top: 12px;
+    padding: 12px 0;
 }
 
 #deals{
@@ -14,17 +15,24 @@
     align-items: center;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    height: 80vh;
 }
 
-.dealCard {
+#deals a {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
+.dealCard {
     margin: 24px;
     padding: 20px 54px;
     border: 3px solid var(--light-color);
     background-color: #ccc2b63a;
     width: 40%;
+    height: 525px;
     border-radius: 12px;
     transition: all 0.4s;
 }
