--- a/src/styles/dealContainer.css
+++ b/src/styles/dealContainer.css
@@ -3,7 +3,7 @@
 #dealContainer{
     padding: var(--page-padding);
     width: 90%;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
 }
 
 #dealContainer h1{
@@ -15,13 +15,14 @@
     align-items: center;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    height: 80vh;
+    /* height: 80vh; */
 }
 
 #deals a {
+    text-decoration: none;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     width: 100%;
     height: 100%;
 }
@@ -31,7 +32,7 @@
     padding: 20px 54px;
     border: 3px solid var(--light-color);
     background-color: #ccc2b63a;
-    width: 40%;
+    width: 35%;
     height: 525px;
     border-radius: 12px;
     transition: all 0.4s;
