--- a/src/styles/dealContainer.css
+++ b/src/styles/dealContainer.css
@@ -13,7 +13,7 @@
 #deals{
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-wrap: wrap;
     /* height: 80vh; */
 }
@@ -21,19 +21,16 @@
 #deals a {
     text-decoration: none;
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    width: 100%;
-    height: 100%;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .dealCard {
-    margin: 24px;
-    padding: 5px 34px;
+    margin: 8px;
+    padding: 10px 26px;
     border: 3px solid var(--light-color);
     background-color: #ccc2b63a;
-    width: 26%;
-    height: 425px;
+    width: 100%;
     border-radius: 12px;
     transition: all 0.4s;
 }
@@ -45,12 +42,18 @@
 
 .dealCard img {
     border-radius: 8px;
-    max-width: 600px;
-    max-height: 281px;
+    width: 467px;
+    height: 181px;
+}
+
+.cardContent {
+    margin-left: 35px;
+    width: 100%;
 }
 
 .title{
     max-width: 90%;
+    margin-bottom: 16px;
 }
 
 .tag {
