--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -8,6 +8,12 @@ header, .header {
     min-height: 45px;
     background-color: var(--secondary-color);
   }
+
+  .header {
+    background-color: transparent;
+    justify-content: flex-start;
+    gap: 14px;
+  }
   
   #onSale {
     margin: 0 5px;
