--- a/src/styles/dealContainer.css
+++ b/src/styles/dealContainer.css
@@ -21,8 +21,9 @@
 #deals a {
     text-decoration: none;
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    /* flex-direction: column; */
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
 .dealCard {
@@ -40,15 +41,33 @@
     filter: drop-shadow(0px 10px 5px #ccc2b63b);
 }
 
-.dealCard img {
+.thumb {
     border-radius: 8px;
     width: 467px;
     height: 181px;
 }
 
 .cardContent {
-    margin-left: 35px;
     width: 100%;
+    display: flex;
+    gap: 36px;
+}
+
+.idkContainer{
+    width: 100%;
+    display: flex;
+    gap: 30px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.textContent{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 .title{
