--- a/src/styles/dealContainer.css
+++ b/src/styles/dealContainer.css
@@ -43,14 +43,15 @@
 
 .thumb {
     border-radius: 8px;
-    width: 467px;
-    height: 181px;
+    width: 367px;
+    height: 81px;
 }
 
 .cardContent {
     width: 100%;
     display: flex;
     gap: 36px;
+    align-items: center;
 }
 
 .idkContainer{
@@ -65,9 +66,8 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 24px;
     justify-content: center;
-    align-items: flex-start;
+    align-items: flex;
 }
 
 .title{
