--- a/src/styles/dealContainer.css
+++ b/src/styles/dealContainer.css
@@ -105,3 +105,30 @@
     margin-left: 6px;
     align-self: flex-start;
 }
+
+/* HTML: <div class="loader"></div> */
+.loader {
+    height: 50px;
+    margin: 16% auto;
+    aspect-ratio: 2;
+    border: 10px solid var(--bg-color);
+    box-sizing: border-box;
+    background: 
+      radial-gradient(farthest-side,#fff 98%, var(--bg-color)) left/20px 20px,
+      radial-gradient(farthest-side,#fff 98%, var(--bg-color)) left/20px 20px,
+      radial-gradient(farthest-side,#fff 98%, var(--bg-color)) center/20px 20px,
+      radial-gradient(farthest-side,#fff 98%, var(--bg-color)) right/20px 20px,
+      var(--bg-color);
+    background-repeat: no-repeat;
+    filter: blur(4px) contrast(10);
+    animation: l14 1s infinite;
+  }
+  @keyframes l14 {
+    100%  {background-position:right,left,center,right}
+  }
+
+  .pageBtn {
+    border-radius: 30%;
+    padding: 3.5px 10px;
+    margin: 0 10px;
+  }
