--- a/src/styles/dealContainer.css
+++ b/src/styles/dealContainer.css
@@ -11,11 +11,12 @@
 }
 
 #deals{
-    display: flex;
+    /* display: flex;
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap;
-    /* height: 80vh; */
+    flex-wrap: wrap; */
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 #deals a {
@@ -31,7 +32,8 @@
     padding: 10px 26px;
     border: 3px solid var(--light-color);
     background-color: #ccc2b63a;
-    width: 100%;
+    width: fit-content;
+    min-width: 26vw;
     border-radius: 12px;
     transition: all 0.4s;
 }
@@ -49,16 +51,17 @@
 
 .cardContent {
     width: 100%;
-    display: flex;
+    /* display: flex; */
     gap: 36px;
     align-items: center;
+    text-align: center;
 }
 
 .idkContainer{
     width: 100%;
     display: flex;
     gap: 30px;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
@@ -78,6 +81,8 @@
 .tag {
     display: flex;
     align-items: center;
+    justify-content: center;
+    margin-top: 32px;
 }
 
 .saleTag{
