--- a/src/styles/dealContainer.css
+++ b/src/styles/dealContainer.css
@@ -68,9 +68,10 @@
 .textContent{
     width: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex;
+    /* flex-direction: column; */
+    justify-content: space-between;
+    align-items: flex-end;
+    text-align: left;
 }
 
 .title{
