disabled filter button when searching

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,6 +29,11 @@
     border-radius: 8px;
   }
 
+  button:disabled {
+    background-color: grey;
+    border: grey 1px solid;
+  }
+
   button:hover{
     cursor: pointer;
   }
