--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -58,8 +58,8 @@
     margin-bottom: 16px;
   }
 
-  .accentColor{
-    color: #ffbe74;
+  .defaultAccentColor{
+    color: var(--secondary-color);
   }
 
   .mediumFont {
