--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,16 +1,21 @@
 :root {
-    --primary-color: #24211C;
-    --secondary-color: #A5845B;
-    --accent-color: #FEFEFE;
-    --light-color: #CCC2B6;
-    --bg-color: #24211C;
-    --page-padding: 12px 2.5%;
-    --primary-rgb: 216, 64, 64;
-    --red-primary-color: #D84040;
-    --red-secondary-color: #8E1616;
-    --red-accent-color: #EEEEEE;
-    --red-dark-color: #1D1616;
-  }
+  --primary-color: #24211C;
+  --secondary-color: #A5845B;
+  --accent-color: #FEFEFE;
+  --light-color: #CCC2B6;
+  --bg-color: #24211C;
+  --page-padding: 12px 2.5%;
+  --primary-rgb: 216, 64, 64;
+}
+
+/* Dark theme overrides */
+[data-theme="dark"] {
+  --primary-color: #1D1616;
+  --secondary-color: #8E1616;
+  --accent-color: #EEEEEE;
+  --bg-color: #1D1616;
+  --text-color: #FEFEFE; /* White text for dark theme */
+}
 
   @font-face {
     font-family: Kanit;
