--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,6 +27,10 @@
     font-family: Kanit;
   }
 
+  html, body {
+    width: 100vw;
+  }
+
   button {
     padding: 5px 16px;
     background-color: transparent;
