--- a/src/styles/dealContainer.css
+++ b/src/styles/dealContainer.css
@@ -168,3 +168,13 @@
         text-align: center;
     }
   }
+  @media (min-width: 769px) and (max-width: 1024px) {
+    #deals{
+        grid-template-columns: 1fr 1fr;
+    }
+    .thumb {
+        border-radius: 8px;
+        width: 231px;
+        height: 87px;
+    }
+  }
