--- a/src/styles/dealContainer.css
+++ b/src/styles/dealContainer.css
@@ -11,8 +11,8 @@
 }
 
 #deals{
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(430px, 1fr));
+    /* display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(430px, 1fr)); */
 }
 
 #deals a {
@@ -26,10 +26,10 @@
 .dealCard {
     margin: 8px;
     padding: 10px 26px;
-    border: 3px solid var(--light-color);
-    background-color: #ccc2b63a;
+    border: 2px solid var(--light-color);
+    background-color: #00000027;
     /* width: fit-content; */
-    border-radius: 12px;
+    border-radius: 7px;
     transition: all 0.4s;
 }
 
@@ -39,46 +39,56 @@
 }
 
 .thumb {
-    border-radius: 8px;
-    width: 367px;
-    height: 81px;
+    border-radius: 6px;
+        width: 244px;
+        height: 79px;
 }
 
 .cardContent {
     width: 100%;
-    /* display: flex; */
+    display: flex;
     gap: 36px;
     align-items: center;
-    text-align: center;
+    justify-content: space-between;
 }
 
-.idkContainer{
-    width: 100%;
+.imgContainer{
+    width: fit-content;
+    max-width: 55%;
     display: flex;
-    gap: 30px;
-    justify-content: center;
+    gap: 18px;
+    justify-content: flex-start;
     align-items: center;
 }
 
 .textContent{
-    width: 100%;
+    width: 20%;
     display: flex;
-    /* flex-direction: column; */
+    /* flex-wrap: wrap-reverse; */
     justify-content: space-between;
     align-items: flex-end;
     text-align: left;
 }
 
+.textInfo{
+    width: fit-content;
+    /* text-align: center; */
+}
+
 .title{
-    max-width: 100%;
-    margin-bottom: 16px;
+  display: inline-block;
+    width: 95%;
+    overflow: hidden;
+    text-wrap: nowrap;
+    text-overflow: ellipsis;
+    /* margin-bottom: 16px; */
 }
 
 .tag {
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin-top: 32px;
+    justify-content: flex-start;
+    margin-top: 18px;
 }
 
 .saleTag{
@@ -148,7 +158,7 @@
     .textContent{
         width: 100%;
         display: flex;
-        flex-direction: column;
+        /* flex-direction: column; */
         justify-content: center;
         align-items: center;
         text-align: center;
@@ -169,11 +179,11 @@
   }
   @media (min-width: 769px) and (max-width: 1024px) {
     #deals{
-        grid-template-columns: 1fr 1fr;
+        /* grid-template-columns: 1fr 1fr; */
     }
     .thumb {
         border-radius: 8px;
-        width: 231px;
-        height: 87px;
+        /* width: 231px;
+        height: 87px; */
     }
   }
