--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,55 +1,66 @@
 @import url(./globals.css);
 
-header, .header {
-    padding: var(--page-padding);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    min-height: 45px;
-    background-color: var(--secondary-color);
+header,
+.header {
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 80vw;
+  padding: var(--page-padding);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 45px;
+  background-color: var(--secondary-color);
+}
+
+.header {
+  background-color: transparent;
+  justify-content: flex-start;
+  gap: 14px;
+}
+
+#onSale {
+  margin: 0 5px;
+}
+
+#titleSearch {
+  padding-left: 10px;
+  background-color: #2a2a2a52;
+  border: 2px solid #fff;
+  border-radius: 10px;
+  font-size: large;
+}
+
+#titleSearch::placeholder {
+  color: #ffffff98;
+}
+
+@media (max-width: 768px) {
+  header {
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 22px;
   }
 
   .header {
-    background-color: transparent;
-    justify-content: flex-start;
-    gap: 14px;
-  }
-  
-  #onSale {
-    margin: 0 5px;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 22px;
   }
 
-  #titleSearch {
-    padding-left: 10px;
-    background-color: #2a2a2a52;
-    border: 2px solid #fff;
-    border-radius: 10px;
-    font-size: large;
+  .header div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
-  #titleSearch::placeholder {
-    color: #ffffff98;
+  .header:last-child {
+    width: 100%;
   }
-  @media (max-width: 768px) {
-    header {
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 22px;
-    }
-    .header {
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 22px;
-    }
-    .header div {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    .header:last-child {
-      width: 100%;
-    }
-    .header div select {
-      margin-left: 10px;
-    }
+
+  .header div select {
+    margin-left: 10px;
   }
+}
